--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     links:
       - mysql:agrix
     environment:
-      - DATABASE_HOST=mysql #uma rede de containers usa-se o nome do servico (msql)
+      - DATABASE_HOST=jdbc:mysql://mysql:3306/agrix?createDatabaseIfNotExist=true #uma rede de containers usa-se o nome do servico (msql)
       - DATABASE_PORT=3306
       - DATABASE_USER=root
       - DATABASE_PASSWORD=root
