--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configuracao do DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/agrix?createDatabaseIfNotExist=true
+spring.datasource.url=${DATABASE_HOST:jdbc:mysql://localhost:3306/agrix?createDatabaseIfNotExist=true}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
